# jenkins-demo

./: .gitignore  2048-game.html  Cargo.toml  Dockerfile  Jenkinsfile  Jenkinsfile.rust  Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README-JENKINS-CLI-RUST.md  README-RUST.md  README.md  SUBDOMAIN_TOOLS_README.md  advanced_subdomain_finder.py  apiserver-ha-config.yaml  build.bat  build.sh  build_rust.bat  build_rust.sh  cdn_optimization_script.py  check_priceclass_status.py  china_hk_routing_analysis.py  china_routing_analysis.md  cloudfront_china_optimization.md  cloudfront_regional_test.py  cloudfront_routing_config.py  demo_usage.py  disaster-recovery.md  etcd-ha-config.yaml  fix_sfo_routing.sh  go.mod  go.sum  install_modern_tools.sh  install_msvc_buildtools.bat  install_rust.bat  jenkins-cli.go  k8s-ha-setup.sh  k8s.yaml  main.go  main_test.go  (+9 more)
.claude/: settings.local.json
src/: jenkins_cli.rs  lib.rs  main.rs
